photo-record-metadata-evolution